--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost/iad_cw
 spring.datasource.username=nailstorm
 spring.datasource.password=12345678
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
