backend: more practical solution for BigInteger issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=nailstorm
 spring.datasource.password=12345678
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=mnu.DbDialect
 
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
