--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=mnu.DbDialect
 
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
+
+mnu.seed-db=true
