--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=mnu.DbDialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mnu.cw1@gmail.com
+spring.mail.password=lol
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
