--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=mnu.DbDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=mnu.cw1@gmail.com
-spring.mail.password=lol
+spring.mail.password=mkqmyktf5xRb3Zg
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
