--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=mnu.DbDialect
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=mnu.cw1@gmail.com
-spring.mail.password=mkqmyktf5xRb3Zg
-spring.mail.port=587
+spring.mail.host=mail.buycow.org
+#spring.mail.username=mnu.cw1@gmail.com
+#spring.mail.password=mkqmyktf5xRb3Zg
+spring.mail.port=25
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.required=true
